[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Misc/PeaberryMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Misc/m3x6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.74902 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 256.0
margin_bottom = 16.0
custom_colors/font_color = Color( 1, 0.0901961, 0.0901961, 1 )
custom_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="Control" type="Control" parent="ColorRect/VBoxContainer"]
margin_top = 16.0
margin_right = 256.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 21.0
margin_right = 256.0
margin_bottom = 99.0
alignment = 1

[node name="Controls" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 45.0
margin_right = 210.0
margin_bottom = 78.0
custom_constants/line_spacing = 0
custom_fonts/font = SubResource( 3 )
text = "             Controls:
-Arrows = move        -SPACE = jump
-Q = swing paddle      -E = change skin
-ENTER/DOWN ARROW = go to next image
-S = smile            -V = victory
-P = pause           -ESC = QUIT"

[node name="Control2" type="Control" parent="ColorRect/VBoxContainer"]
visible = false
margin_top = 86.0
margin_right = 256.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 99.0
margin_right = 256.0
margin_bottom = 159.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 70.0
margin_bottom = 60.0

[node name="PrevLevel" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Prev Level"

[node name="Control" type="Control" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 84.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
alignment = 1

[node name="Resume" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 80.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Resume Game"

[node name="MainMenu" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 80.0
margin_bottom = 52.0
rect_min_size = Vector2( 80, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Go to Main Menu"

[node name="Control2" type="Control" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 182.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 186.0
margin_right = 236.0
margin_bottom = 60.0

[node name="NextLevel" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer/CenterContainer2"]
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 20 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Next Level"

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/CenterContainer/PrevLevel" to="." method="_on_PrevLevel_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/CenterContainer2/NextLevel" to="." method="_on_NextLevel_pressed"]
